<package>
  <name>rosserial_stm</name>
  <version>0.7.1</version>
  <description>
    Libraries and examples for ROSserial usage on STM32 Platforms.
  </description>
  <author>Bakui Chou</author>
  <maintainer email="chou@jsk.imi.i.u-tokyo.ac.jp">Paul Bouchier</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/rosserial_arduino</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>rosserial_msgs</run_depend>
  <run_depend>rosserial_client</run_depend>
</package>


